--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/jpeg" href="./src/assets/image1.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>DEV.Rudro</title>
   </head>
   <body class="bg-lbg text-ltext dark:bg-slate-900 dark:text-dtext transition-colors duration-500">
     <div id="root"></div>
